update:create course card component

--- a/src/app/components/private/blog/blog-list/blog-list.component.html
+++ b/src/app/components/private/blog/blog-list/blog-list.component.html
@@ -76,6 +76,7 @@
                           'tu vas supprimer ' +
                           article.titre +
                           ', tu es sure ?',
+                          icon: 'warning',
                         showCancelButton: true,
                         confirmButtonText: 'supprimer',
                         confirmButtonColor: 'red'}"
