--- a/src/app/components/private/blog/update-article/update-article.component.html
+++ b/src/app/components/private/blog/update-article/update-article.component.html
@@ -87,6 +87,7 @@
             style="color: white"
             [swal]="{
               text: 'tu es sure ?',
+              icon: 'warning',
               showCancelButton: true,
               confirmButtonText: 'Modifier',
               confirmButtonColor: '#FF8800'
