--- a/src/app/components/private/categories/categories-list/categoriesList.component.html
+++ b/src/app/components/private/categories/categories-list/categoriesList.component.html
@@ -60,6 +60,7 @@
                           'tu vas supprimer ' +
                           category.name +
                           ', tu es sure ?',
+                          icon: 'warning',
                         showCancelButton: true,
                         confirmButtonText: 'supprimer',
                         confirmButtonColor: 'red'
