--- a/src/app/components/private/trainers/modify-trainer/modify-trainer.component.html
+++ b/src/app/components/private/trainers/modify-trainer/modify-trainer.component.html
@@ -216,6 +216,7 @@
             [swal]="{
               text: 'tu es sure ?',
               showCancelButton: true,
+              icon: 'warning',
               confirmButtonText: 'Modifier',
               confirmButtonColor: '#FF8800'
             }"
