--- a/src/app/components/private/users/users-list/users-list.component.html
+++ b/src/app/components/private/users/users-list/users-list.component.html
@@ -48,6 +48,7 @@
                         user.firstname +
                         ', tu es sure ?',
                       showCancelButton: true,
+                      icon: 'warning',
                       confirmButtonText: 'supprimer',
                       confirmButtonColor: 'red'
                     }"
