--- a/src/app/components/private/messages/message-list/message-list.component.html
+++ b/src/app/components/private/messages/message-list/message-list.component.html
@@ -56,6 +56,7 @@
                           'tu vas supprimer ' +
                           message.title +
                           ', tu es sure ?',
+                        icon: 'warning',
                         showCancelButton: true,
                         confirmButtonText: 'supprimer',
                         confirmButtonColor: 'red'
