--- a/src/app/components/private/trainings/modify-training/modify-training.component.html
+++ b/src/app/components/private/trainings/modify-training/modify-training.component.html
@@ -234,18 +234,19 @@
             </div>
 
             <button
-            class="btn btn-primary mt-2"
-            style="color: white"
-            [swal]="{
-              text: 'tu es sure ?',
-              showCancelButton: true,
-              confirmButtonText: 'Modifier',
-              confirmButtonColor: '#FF8800'
-            }"
-            (confirm)="update()"
-          >
-            modifier
-          </button>
+              class="btn btn-primary mt-2"
+              style="color: white"
+              [swal]="{
+                text: 'tu es sure ?',
+                showCancelButton: true,
+                icon: 'warning',
+                confirmButtonText: 'Modifier',
+                confirmButtonColor: '#FF8800'
+              }"
+              (confirm)="update()"
+            >
+              modifier
+            </button>
           </form>
         </div>
       </main>
