feature: temoignage carousel

--- a/src/app/components/private/shared/side-bar/side-bar.component.html
+++ b/src/app/components/private/shared/side-bar/side-bar.component.html
@@ -44,6 +44,12 @@
           </div>
           Messages
         </a>
+        <a class="nav-link" routerLink="/admin/temoignages">
+          <div class="sb-nav-link-icon">
+            <i class="fas fa-tachometer-alt"></i>
+          </div>
+          Temoignages
+        </a>
       </div>
     </div>
   </nav>
